// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/alert/demo/banner.md correctly 1`] = `
<div>
  <div
    class="ant-alert ant-alert-warning ant-alert-banner"
    data-show="true"
  >
    <i
      class="anticon anticon-exclamation-circle ant-alert-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="exclamation-circle"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm-40 231c0-22.1 17.9-40 40-40s40 17.9 40 40v369c0 22.1-17.9 40-40 40s-40-17.9-40-40V231zm40 563c-24.9 0-45-20.1-45-45s20.1-45 45-45 45 20.1 45 45c0 24.8-20.1 45-45 45z"
        />
      </svg>
    </i>
    <span
      class="ant-alert-message"
    >
      Warning text
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <br />
  <div
    class="ant-alert ant-alert-warning ant-alert-banner"
    data-show="true"
  >
    <i
      class="anticon anticon-exclamation-circle ant-alert-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="exclamation-circle"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm-40 231c0-22.1 17.9-40 40-40s40 17.9 40 40v369c0 22.1-17.9 40-40 40s-40-17.9-40-40V231zm40 563c-24.9 0-45-20.1-45-45s20.1-45 45-45 45 20.1 45 45c0 24.8-20.1 45-45 45z"
        />
      </svg>
    </i>
    <span
      class="ant-alert-message"
    >
      Very long warning text warning text text text text text text text
    </span>
    <span
      class="ant-alert-description"
    />
    <a
      class="ant-alert-close-icon"
    >
      <i
        class="anticon anticon-close"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
          />
        </svg>
      </i>
    </a>
  </div>
  <br />
  <div
    class="ant-alert ant-alert-warning ant-alert-no-icon ant-alert-banner"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Warning text without icon
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <br />
  <div
    class="ant-alert ant-alert-error ant-alert-banner"
    data-show="true"
  >
    <i
      class="anticon anticon-close-circle ant-alert-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close-circle"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm205.3 666.9c14 14.1 14 36.9-.1 50.9-7 7-16.2 10.5-25.4 10.5s-18.5-3.5-25.5-10.6L512 563 357.7 717.7c-7 7.1-16.3 10.6-25.5 10.6s-18.4-3.5-25.4-10.5c-14.1-14-14.1-36.8-.1-50.9L461.2 512 306.7 357.1c-14-14.1-14-36.9.1-50.9s36.9-14 50.9.1L512 461l154.3-154.8c14-14.1 36.8-14.1 50.9-.1 14.1 14 14.1 36.8.1 50.9L562.8 512l154.5 154.9z"
        />
      </svg>
    </i>
    <span
      class="ant-alert-message"
    >
      Error text
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
</div>
`;

exports[`renders ./components/alert/demo/basic.md correctly 1`] = `
<div
  class="ant-alert ant-alert-success ant-alert-no-icon"
  data-show="true"
>
  <span
    class="ant-alert-message"
  >
    Success Text
  </span>
  <span
    class="ant-alert-description"
  />
</div>
`;

exports[`renders ./components/alert/demo/closable.md correctly 1`] = `
<div>
  <div
    class="ant-alert ant-alert-warning ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Warning Text Warning Text Warning TextW arning Text Warning Text Warning TextWarning Text
    </span>
    <span
      class="ant-alert-description"
    />
    <a
      class="ant-alert-close-icon"
    >
      <i
        class="anticon anticon-close"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
          />
        </svg>
      </i>
    </a>
  </div>
  <div
    class="ant-alert ant-alert-error ant-alert-with-description ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Error Text
    </span>
    <span
      class="ant-alert-description"
    >
      Error Description Error Description Error Description Error Description Error Description Error Description
    </span>
    <a
      class="ant-alert-close-icon"
    >
      <i
        class="anticon anticon-close"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
          />
        </svg>
      </i>
    </a>
  </div>
</div>
`;

exports[`renders ./components/alert/demo/close-text.md correctly 1`] = `
<div
  class="ant-alert ant-alert-info ant-alert-no-icon"
  data-show="true"
>
  <span
    class="ant-alert-message"
  >
    Info Text
  </span>
  <span
    class="ant-alert-description"
  />
  <a
    class="ant-alert-close-icon"
  >
    Close Now
  </a>
</div>
`;

exports[`renders ./components/alert/demo/description.md correctly 1`] = `
<div>
  <div
    class="ant-alert ant-alert-success ant-alert-with-description ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Success Text
    </span>
    <span
      class="ant-alert-description"
    >
      Success Description Success Description Success Description
    </span>
  </div>
  <div
    class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Info Text
    </span>
    <span
      class="ant-alert-description"
    >
      Info Description Info Description Info Description Info Description
    </span>
  </div>
  <div
    class="ant-alert ant-alert-warning ant-alert-with-description ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Warning Text
    </span>
    <span
      class="ant-alert-description"
    >
      Warning Description Warning Description Warning Description Warning Description
    </span>
  </div>
  <div
    class="ant-alert ant-alert-error ant-alert-with-description ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Error Text
    </span>
    <span
      class="ant-alert-description"
    >
      Error Description Error Description Error Description Error Description
    </span>
  </div>
</div>
`;

exports[`renders ./components/alert/demo/icon.md correctly 1`] = `
<div>
  <div
    class="ant-alert ant-alert-success"
    data-show="true"
  >
    <i
      class="anticon anticon-check-circle ant-alert-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="check-circle"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm260.3 356.4L412.8 717.1l-.4.4c-2.4 2.6-5.3 4.9-8.5 6.7-5.6 3.2-11.8 4.7-17.8 4.7-12.5 0-24.7-6.5-31.3-18.2L245.9 520.3C236 503 242 481 259.3 471.2c17.3-9.9 39.3-3.9 49.1 13.4l85.4 149.5 327.5-328.5c14-14.1 36.8-14.1 50.9-.1 14.1 14.1 14.1 36.9.1 50.9z"
        />
      </svg>
    </i>
    <span
      class="ant-alert-message"
    >
      Success Tips
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-info"
    data-show="true"
  >
    <i
      class="anticon anticon-info-circle ant-alert-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="info-circle"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm-3 184.5c19.9 0 36 16.1 36 36s-16.1 36-36 36-36-16.1-36-36 16.1-36 36-36zm157.2 557.1c0 19.9-16.1 36-36 36H387.8c-19.9 0-36-16.1-36-36s16.1-36 36-36H473V391.5h-60c-19.9 0-36-16.1-36-36s16.1-36 36-36h96c19.9 0 36 16.1 36 36v350.1h85.2c19.9 0 36 16.1 36 36z"
        />
      </svg>
    </i>
    <span
      class="ant-alert-message"
    >
      Informational Notes
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-warning"
    data-show="true"
  >
    <i
      class="anticon anticon-exclamation-circle ant-alert-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="exclamation-circle"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm-40 231c0-22.1 17.9-40 40-40s40 17.9 40 40v369c0 22.1-17.9 40-40 40s-40-17.9-40-40V231zm40 563c-24.9 0-45-20.1-45-45s20.1-45 45-45 45 20.1 45 45c0 24.8-20.1 45-45 45z"
        />
      </svg>
    </i>
    <span
      class="ant-alert-message"
    >
      Warning
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-error"
    data-show="true"
  >
    <i
      class="anticon anticon-close-circle ant-alert-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close-circle"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm205.3 666.9c14 14.1 14 36.9-.1 50.9-7 7-16.2 10.5-25.4 10.5s-18.5-3.5-25.5-10.6L512 563 357.7 717.7c-7 7.1-16.3 10.6-25.5 10.6s-18.4-3.5-25.4-10.5c-14.1-14-14.1-36.8-.1-50.9L461.2 512 306.7 357.1c-14-14.1-14-36.9.1-50.9s36.9-14 50.9.1L512 461l154.3-154.8c14-14.1 36.8-14.1 50.9-.1 14.1 14 14.1 36.8.1 50.9L562.8 512l154.5 154.9z"
        />
      </svg>
    </i>
    <span
      class="ant-alert-message"
    >
      Error
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-success ant-alert-with-description"
    data-show="true"
  >
    <i
      class="anticon anticon-check-circle-o ant-alert-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="check-circle-o"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M721.3 305.6L393.8 634.1l-85.4-149.5c-9.9-17.3-31.8-23.3-49.1-13.4S236 503 245.9 520.3l108.8 190.5c6.6 11.6 18.8 18.2 31.3 18.2 6.1 0 12.2-1.5 17.8-4.7 3.2-1.9 6.1-4.1 8.5-6.7l.4-.4 359.5-360.6c14-14.1 14-36.9-.1-50.9-14-14.2-36.7-14.2-50.8-.1z"
        />
        <path
          d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm311.1 823.1c-40.4 40.4-87.5 72.2-139.9 94.3C629 940.4 571.4 952 512 952c-59.4 0-117-11.6-171.2-34.5-52.4-22.2-99.4-53.9-139.9-94.3-40.4-40.4-72.2-87.5-94.3-139.9C83.6 629 72 571.4 72 512c0-59.4 11.6-117 34.5-171.2 22.2-52.4 53.9-99.4 94.3-139.9 40.4-40.4 87.5-72.2 139.9-94.3C395 83.6 452.6 72 512 72c59.4 0 117 11.6 171.2 34.5 52.4 22.2 99.4 53.9 139.9 94.3 40.4 40.4 72.2 87.5 94.3 139.9C940.4 395 952 452.6 952 512c0 59.4-11.6 117-34.5 171.2-22.2 52.4-53.9 99.5-94.4 139.9z"
        />
      </svg>
    </i>
    <span
      class="ant-alert-message"
    >
      Success Tips
    </span>
    <span
      class="ant-alert-description"
    >
      Detailed description and advices about successful copywriting.
    </span>
  </div>
  <div
    class="ant-alert ant-alert-info ant-alert-with-description"
    data-show="true"
  >
    <i
      class="anticon anticon-info-circle-o ant-alert-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="info-circle-o"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm311.1 823.1c-40.4 40.4-87.5 72.2-139.9 94.3C629 940.4 571.4 952 512 952c-59.4 0-117-11.6-171.2-34.5-52.4-22.2-99.4-53.9-139.9-94.3-40.4-40.4-72.2-87.5-94.3-139.9C83.6 629 72 571.4 72 512c0-59.4 11.6-117 34.5-171.2 22.2-52.4 53.9-99.4 94.3-139.9 40.4-40.4 87.5-72.2 139.9-94.3C395 83.6 452.6 72 512 72c59.4 0 117 11.6 171.2 34.5 52.4 22.2 99.4 53.9 139.9 94.3 40.4 40.4 72.2 87.5 94.3 139.9C940.4 395 952 452.6 952 512c0 59.4-11.6 117-34.5 171.2-22.2 52.4-53.9 99.5-94.4 139.9z"
        />
        <path
          d="M630.2 705.6H545V355.5c0-19.9-16.1-36-36-36h-96c-19.9 0-36 16.1-36 36s16.1 36 36 36h60v314.1h-85.2c-19.9 0-36 16.1-36 36s16.1 36 36 36H630.2c19.9 0 36-16.1 36-36s-16.1-36-36-36zM473 220.5a36 36 0 1 0 72 0 36 36 0 1 0-72 0z"
        />
      </svg>
    </i>
    <span
      class="ant-alert-message"
    >
      Informational Notes
    </span>
    <span
      class="ant-alert-description"
    >
      Additional description and informations about copywriting.
    </span>
  </div>
  <div
    class="ant-alert ant-alert-warning ant-alert-with-description"
    data-show="true"
  >
    <i
      class="anticon anticon-exclamation-circle-o ant-alert-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="exclamation-circle-o"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M512 72c59.4 0 117 11.6 171.2 34.5 52.4 22.2 99.4 53.9 139.9 94.3 40.4 40.4 72.2 87.5 94.3 139.9C940.4 395 952 452.6 952 512s-11.6 117-34.5 171.2c-22.2 52.4-53.9 99.4-94.3 139.9-40.4 40.4-87.5 72.2-139.9 94.3C629 940.4 571.4 952 512 952s-117-11.6-171.2-34.5c-52.4-22.2-99.4-53.9-139.9-94.3-40.4-40.4-72.2-87.5-94.3-139.9C83.6 629 72 571.4 72 512s11.6-117 34.5-171.2c22.2-52.4 53.9-99.4 94.3-139.9 40.4-40.4 87.5-72.2 139.9-94.3C395 83.6 452.6 72 512 72m0-72C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0z"
        />
        <path
          d="M512 640c-22.1 0-40-17.9-40-40V231c0-22.1 17.9-40 40-40s40 17.9 40 40v369c0 22.1-17.9 40-40 40zM467 749a45 45 0 1 0 90 0 45 45 0 1 0-90 0z"
        />
      </svg>
    </i>
    <span
      class="ant-alert-message"
    >
      Warning
    </span>
    <span
      class="ant-alert-description"
    >
      This is a warning notice about copywriting.
    </span>
  </div>
  <div
    class="ant-alert ant-alert-error ant-alert-with-description"
    data-show="true"
  >
    <i
      class="anticon anticon-close-circle-o ant-alert-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close-circle-o"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M717.2 306.2c-14.1-14-36.9-14-50.9.1L512 461 357.7 306.3c-14-14.1-36.8-14.1-50.9-.1-14.1 14-14.1 36.8-.1 50.9L461.2 512 306.7 666.9c-14 14.1-14 36.9.1 50.9 7 7 16.2 10.5 25.4 10.5s18.5-3.5 25.5-10.6L512 563l154.3 154.8c7 7.1 16.3 10.6 25.5 10.6s18.4-3.5 25.4-10.5c14.1-14 14.1-36.8.1-50.9L562.8 512l154.4-154.9c14.1-14.1 14.1-36.9 0-50.9z"
        />
        <path
          d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm311.1 823.1c-40.4 40.4-87.5 72.2-139.9 94.3C629 940.4 571.4 952 512 952c-59.4 0-117-11.6-171.2-34.5-52.4-22.2-99.4-53.9-139.9-94.3-40.4-40.4-72.2-87.5-94.3-139.9C83.6 629 72 571.4 72 512c0-59.4 11.6-117 34.5-171.2 22.2-52.4 53.9-99.4 94.3-139.9 40.4-40.4 87.5-72.2 139.9-94.3C395 83.6 452.6 72 512 72c59.4 0 117 11.6 171.2 34.5 52.4 22.2 99.4 53.9 139.9 94.3 40.4 40.4 72.2 87.5 94.3 139.9C940.4 395 952 452.6 952 512c0 59.4-11.6 117-34.5 171.2-22.2 52.4-53.9 99.5-94.4 139.9z"
        />
      </svg>
    </i>
    <span
      class="ant-alert-message"
    >
      Error
    </span>
    <span
      class="ant-alert-description"
    >
      This is an error message about copywriting.
    </span>
  </div>
</div>
`;

exports[`renders ./components/alert/demo/smooth-closed.md correctly 1`] = `
<div>
  <div
    class="ant-alert ant-alert-success ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Alert Message Text
    </span>
    <span
      class="ant-alert-description"
    />
    <a
      class="ant-alert-close-icon"
    >
      <i
        class="anticon anticon-close"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
          />
        </svg>
      </i>
    </a>
  </div>
  <p>
    placeholder text here
  </p>
</div>
`;

exports[`renders ./components/alert/demo/style.md correctly 1`] = `
<div>
  <div
    class="ant-alert ant-alert-success ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Success Text
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-info ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Info Text
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-warning ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Warning Text
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-error ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Error Text
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
</div>
`;
